adidng the structure of current music element

--- a/index.html
+++ b/index.html
@@ -5,9 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <script src="./main.js" defer></script>
 </head>
 <body>
-    
+    <div class="main__container">
+        <div class="main__container--content">
+            <div class="content__container--current--music">
+                <div class="current__music--wallpaper">
+                </div>
+                <h4 class="current__music--song--name">Song name</h4>
+                <h5 class="current__music--singer--name">Singer name</h5>
+                <div class="current__music--control--container">
+                    <div class="control__prev--btn"><i class="fa fa-backward"></i></div>
+                    <div class="control__play--btn"><i class="fa fa-play"></i></div>
+                    <div class="control__next--btn"><i class="fa fa-forward"></i></div>
+                </div>
+                <div class="current__music--timeline">
+                    <div class="timeline__line"></div>
+                    <div class="timeline__handle"></div>
+                </div>
+                <ul class="current__music--likeAnddonwload">
+                    <i class="fa fa-heart fa-2x"></i>
+                    <i class="fa fa-download fa-2x"></i>
+                </ul>
+            </div>
+            <div class="content__container--all--musics">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
