adding new element for liked and all musics

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <div class="main__container">
         <div class="main__container--content">
             <div class="content__container--current--music">
-                <div class="current__music--wallpaper">
-                </div>
+                <div class="current__music--wallpaper"></div>
                 <h4 class="current__music--song--name">Song name</h4>
                 <h5 class="current__music--singer--name">Singer name</h5>
                 <div class="current__music--control--container">
@@ -30,7 +29,17 @@
                     <i class="fa fa-download fa-2x"></i>
                 </ul>
             </div>
-            <div class="content__container--all--musics">
+            <div class="content__container--musics">
+                <button class="All__musics">
+                    <span>All Musics</span>
+                    <div class="musics__available">
+                    </div>
+                </button>
+                <button class="Liked__musics">
+                    <span>Liked Musics</span>
+                    <div class="musics__available">
+                    </div>
+                </button>
             </div>
         </div>
     </div>
