adding style and class names for music tags

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
             <div class="content__container--musics">
                 <button class="All__musics">
                     <span>All Musics</span>
-                    <div class="musics__available">
+                    <div class="All__musics__available">
                     </div>
                 </button>
                 <button class="Liked__musics">
                     <span>Liked Musics</span>
-                    <div class="musics__available">
+                    <div class="All__liked__available">
                     </div>
                 </button>
             </div>
