--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <i class="fa fa-heart fa-2x"></i>
                     <i class="fa fa-download fa-2x"></i>
                 </ul>
+                <audio class="content__container--audio"></audio>
             </div>
             <div class="content__container--musics">
                 <button class="All__musics">
