adding range min and max value

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
                     <div class="control__next--btn"><i class="fa fa-forward"></i></div>
                 </div>
                 <div class="current__music--timeline">
-                    <div class="timeline__line"></div>
-                    <div class="timeline__handle"></div>
+                    <div class="timeline__minTime">00:00</div>
+                    <input type="range" min="1" max="100" value="0">
+                    <div class="timeline__maxTime">00:00</div>
+
                 </div>
                 <ul class="current__music--likeAnddonwload">
                     <i class="fa fa-heart fa-2x"></i>
