adding some tiny things for heart connection

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div class="timeline__maxTime">00:00</div>
                 </div>
                 <ul class="current__music--likeAnddonwload">
-                    <i class="fa fa-heart fa-2x"></i>
+                    <i class="fa fa-heart fa-2x" id="like__icon"></i>
                     <i class="fa fa-download fa-2x"></i>
                 </ul>
                 <audio class="content__container--audio"></audio>
