--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 </div>
                 <ul class="current__music--likeAnddonwload">
                     <i class="fa fa-heart fa-2x" id="like__icon"></i>
+                    <div class="control__volume--btn"><i class="fas fa-volume-up fa-2x"></i></div>
                     <i class="fa fa-download fa-2x"></i>
                 </ul>
                 <audio class="content__container--audio"></audio>
