--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <ul class="current__music--likeAnddonwload">
                     <i class="fa fa-heart fa-2x" id="like__icon"></i>
                     <div class="control__volume--btn"><i class="fas fa-volume-up fa-2x"></i></div>
-                    <i class="fa fa-download fa-2x"></i>
+                    <i class="fa fa-download fa-2x" id="download__icon"></i>
                 </ul>
                 <audio class="content__container--audio"></audio>
             </div>
